--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,10 +23,12 @@ android {
         release {
             storeFile file('certificates/checkout.jks')
             storePassword 'android'
-            keyAlias 'androidreleasekey'
+            keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
     }
+
+
 
     buildTypes {
         release {
@@ -34,10 +36,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/NOTICE'
+    }
+
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'org.apache.httpcomponents:httpmime:4.3.5'
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.google.android.gms:play-services:8.1.0'
+    compile 'com.firebase:firebase-client-android:2.2.4'
+    compile 'com.jakewharton.timber:timber:3.1.0'
+    compile 'com.jakewharton:butterknife:6.1.0'
+
 }
